# galeria-supers

./: .gitignore  pyproject.toml
galeria/: app.py  main.bak.py  main.py
galeria/application/: galeria_controller.py  use_cases.py
galeria/core/: config.py  paths.py
galeria/data/: supers.json
galeria/domain/: models.py  repository.py  super_repository.py
galeria/infrastructure/: in_memory_repository.py
galeria/infrastructure/repositories/: super_repository.py
galeria/ui/components/: fade_overlay.py  gallery_row.py  gallery_view.py  logos_row.py  navigation_arrow.py  placeholders_row.py  super_card.py  super_view.py
galeria/ui/config/: page_config.py
galeria/ui/controllers/: AutoTimeoutController.py  GalleryScrollController.py  auto_time_controller.py  gallery_controller.py  gallery_scroll_controller.py
galeria/ui/events/: scroll_events.py
galeria/ui/layout/: root_layout.py
galeria/ui/navigation/: navigator.py
galeria/ui/theme/: colors.py  theme.py  typography.py
galeria/ui/views/: gallery_view.py  super_view.py
